# tta-srv

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README  tta-service.cfg  vcpkg.json
cmake/: dependencies.cmake
docs/: uml_design.vsdx
service/: CMakeLists.txt  main.cpp  tta-service.cfg
src/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  traits.h
src/activity/: activity.h  activity_manager.cpp  activity_manager.h  kb_activity.cpp  kb_activity.h
src/config/: config.cpp  config.h
src/model/: exchange.h  json.h
src/net_io/: net.h  wss_client.cpp  wss_client.h  wss_config.h
src/storage/: storage.h
